--- a/main.css
+++ b/main.css
@@ -23,6 +23,9 @@
     --img-WS: url('./image/Cover_worksample.png');
     --img-DS: url('./image/Cover_portfolioWeb.png');
 
+
+    
+
     /* Color */
     --white: #ffffff;
     --alert: #A40000;
@@ -345,7 +348,6 @@ body .displayPhone {
     position: absolute;
     background-color: var(--white);
     width: 100%;
-
     left: 0;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 98;
@@ -378,7 +380,7 @@ body .displayPhone {
 /* drop down menu*/
 
 a.nav-link {
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
     text-decoration: none;
     font-size: 16px;
     font-weight: 400;
@@ -902,7 +904,6 @@ polygon {
 
 .shadowBoxLt {
     box-shadow: rgba(176, 178, 179, 0.2) -4px 9px 25px -6px;
-
 }
 
 
@@ -2667,7 +2668,7 @@ button.passwordArr {
 /* below from web 2.0*/
 @media all and (max-width: 680px) {
 
-    body .rowVW {
+    body .rowToColumn {
         display: flex;
         flex-direction: column;
     }
@@ -3785,7 +3786,7 @@ body .flex-container.Mobile {
 
 
 @media screen and (max-width: 480px) {
-    body .rowVW {
+    body .rowToColumn {
         display: flex;
         flex-direction: column;
     }
@@ -4114,7 +4115,7 @@ body .flex-container.Mobile {
 .intro {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -4302,17 +4303,14 @@ body .flex-container.Mobile {
     display: flex;
     flex-direction: column;
 }
-
-.rowVW {
+.row {
     display: flex;
     flex-direction: row;
 }
-
-.rowChng {
+.rowToColumn {
     display: flex;
     flex-direction: row;
 }
-
 .align-top {
     display: flex;
     align-items: flex-start;
@@ -5699,3 +5697,49 @@ button.Clipboard.clickTxt:active {
 }
 
 /* ===== Cloud tags ====== */
+
+/* ===== Share to Social Media ====== */
+
+.dropdownSM {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdownSM-content {
+    display: none;
+    position: absolute;
+    background-color: var(--Grey100);
+    min-width: max-content;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: var(--border-radiusS);
+    z-index: 1;
+    right: 0;
+}
+
+.dropdownSM-content a {
+    color: black;
+    padding: 8px 12px;
+    margin: 6px;
+    text-decoration: none;
+    border-radius: var(--border-radiusS);
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+
+}
+
+.dropdownSM-content a:hover {background-color: #f1f1f1}
+
+.dropdownSM:hover .dropdownSM-content {
+    display: block;
+}
+
+.dropbtnSM:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+.iconM {
+    cursor: pointer;
+}
+/* ===== Share to Social Media ====== */
