--- a/ejs/templates/about/index.ejs
+++ b/ejs/templates/about/index.ejs
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html>
 <!--Head-->
-
-<%- include('shared/head', {Title:'Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang', 
+<%- include('../shared/head', {Title:'Professional Background and Interests - Vicky Wang', 
   description:'Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.', 
   pageURL:'', thumbnailImgURL: 'vickywang_web.png'
   }) %>
+<!--Head-->
 
 
 <body>
-  <%- include('shared/progressBar') %>
-  <!--Header-->
-  <%- include('shared/header', {currentPage: 'PROJECT' }) %>
-  <!--Header-->
+  <%- include('../shared/progressBar') %>
+  <%- include('../shared/header', {currentPage: 'ABOUT' }) %>
+
+  <div class="blankHM"></div>
+  <%- include('../shared/intro', { version: 'defult',
+    contents: ['UX', 'Design', 'Architecture', 'Art'],
+    layoutType: 'withPhoto'
+
+}) %>
+
+
   <div class="blankHL"></div>
   <div class="blankHL"></div>
   <!--Arrow subtitle-->
-  <%- include('shared/arrow', {message: 'this content can be changed, ya!!!' }) %>
+  <%- include('../shared/arrowSubtitle', {message: 'this content can be changed, ya!!!' }) %>
   <!--Arrow subtitle-->
 
 
 
 
-  <h1>Parent Template</h1>
 
-  <!-- Include the child template and pass a static string variable -->
-  <%- include('./shared/grid', {options: {isFull: true, isForFullResponsiveGrid: true}, body:
-            include('./shared/child2') }) %>
+
+
+
+
 
   <!--footer-->
-  <%- include('./shared/footer') %>
+  <%- include('../shared/footer') %>
   <!--footer-->
 
 </body>
