--- a/ejs/templates/shared/child2.ejs
+++ b/ejs/templates/shared/child2.ejs
@@ -1,3 +1,7 @@
 <div>
     <h2>Child Template</h2>
+    <% if (currentPage === 'photography') { %>
+        <p>This is the photography page</p>
+    <%}%>
+
 </div>
