card floating issue fixed

--- a/ejs/templates/about/index.ejs
+++ b/ejs/templates/about/index.ejs
@@ -15,7 +15,7 @@
   <div class="blankHM"></div>
   <%- include('../shared/intro', { version: 'defult',
     contents: ['UX', 'Design', 'Architecture', 'Art'],
-    layoutType: 'withPhoto'
+    layoutType: 'aboutPage'
 
 }) %>
 
